<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- LOGIN -->
    <string name="app_name">JEM Fit</string>
    <string name="txt_lblUser">Username</string>
    <string name="txt_lblPassword">Password</string>
    <string name="txt_cbRememberSesion">Remember session</string>
    <string name="txt_btnLogin">LOGIN</string>
    <string name="txt_lblInfoForRegister">New here? Register here.</string>
    <string name="txt_btnRegister">REGISTER</string>

    <!-- REGISTER -->
    <string name="txt_lblName">First Name</string>
    <string name="txt_lblSurname">Last Name</string>
    <string name="txt_lblPassword2">Repeat Password</string>
    <string name="txt_lblDate">Date of Birth</string>
    <string name="txt_lblEmail">Email</string>
    <string name="txt_lblPhone">Phone</string>

    <!-- WORKOUT -->
    <string name="txt_lblWorkouts">WORKOUTS</string>
    <string name="txt_lblWorkoutNumber">Number of Workouts: </string>
    <string name="txt_columnName">Name</string>
    <string name="txt_columnCop">Number of Exercises</string>
    <string name="txt_columnLvl">Level</string>
    <string name="txt_btnHistory">History</string>

    <!-- WORKOUT-INFO -->
    <string name="txt_lblWorkoutInfo_Header">WORKOUT INFORMATION</string>
    <string name="txt_btnAtzera">Back</string>

    <!-- PROFILE -->
    <string name="txt_lblProfile">MY PROFILE</string>
    <string name="txt_lblHello">Hello, </string>
    <string name="txt_lblProfileInfo">! Here you can change your information.</string>
    <string name="txt_btnPasswordChange">Change password</string>
    <string name="txt_lblCurrentPassword">Current Password</string>
    <string name="txt_lblnewPassword">New password</string>
    <string name="txt_lblnewPasswordRepeat">Repeat new password</string>
    <string name="txt_ClearTheme">Light</string>
    <string name="txt_DarkTheme">Dark</string>
    <string name="txt_lenguajeNone">Select Language</string>
    <string name="txt_lenguajeSpanish">Spanish</string>
    <string name="txt_lenguajeEnglish">English</string>
    <string name="txt_lenguajeBasque">Basque</string>
    <string name="txt_lenguajePolish">Polish</string>

    <string name="txt_LenguajeChangeAlert">Are you sure you want to change the lenguaje? You will need to save and restart the application.</string>
    <string name="txt_btnSave">Save changes</string>

    <!-- EXCEPTION -->
    <string name="txt_EmailFormatError">The email is not correctly formatted!</string>
    <string name="txt_ErrorWrongPassword">The password is incorrect!</string>
    <string name="txt_IlogicalDate">The date is illogical!</string>
    <string name="txt_NullField">You have not filled in all the fields!</string>
    <string name="txt_PasswordDoNotMatch">The passwords do not match!</string>
    <string name="txt_PhoneFormatError">The phone number format is incorrect!</string>
    <string name="txt_UserAlreadyExists">The user already exists!</string>
    <string name="txt_UserNotFound">The user does not exist!</string>

    <!-- ERROR MSG -->
    <string name="txt_LoginError">Login Error!</string>
    <string name="txt_Continue">Continue</string>
    <string name="txt_TryAgain">Try Again!</string>
    <string name="txt_Confirm">Confirm</string>
    <string name="txt_RegisterCorrectAlert">Register Correct</string>
    <string name="txt_RegisterCorrect">User succesfully created!</string>
    <string name="txt_RegisterErrorAlert">Register Error</string>
    <string name="txt_NeedToConfirmAlert">Confirmation needed</string>
    <string name="txt_LogOutAlert">Are you sure you want to logout?</string>
    <string name="txt_YesAlert">Yes</string>
    <string name="txt_NoAlert">No</string>
    <string name="txt_PasswordCurrentSameNew">The new password cannot be the same as the current one!</string>
    <string name="txt_CurrentPasswordError">The current password does not match!</string>
    <string name="txt_UpdateError">Update Error</string>
    <string name="txt_GeneralError">You have entered something wrong!</string>
    <string name="txt_ComingSoon">Coming soon!</string>

</resources>
