<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLogin_appName"
        android:layout_width="67dp"
        android:layout_height="22dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogin_logo"
        app:layout_constraintVertical_bias="0.01999998" />

    <ImageView
        android:id="@+id/imgLogin_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvLogin_user"
        android:layout_width="301dp"
        android:layout_height="28dp"
        android:text="@string/txt_lblUser"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <TextView
        android:id="@+id/tvLogin_password"
        android:layout_width="195dp"
        android:layout_height="28dp"
        android:text="@string/txt_lblPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ptLogin_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <TextView
        android:id="@+id/tvLogin_password2"
        android:layout_width="361dp"
        android:layout_height="29dp"
        android:text="@string/txt_lblInfoForRegister"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <EditText
        android:id="@+id/ptLogin_user"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvLogin_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:id="@+id/ptLogin_password"
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvLogin_password"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin_password"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/btnLogin_login"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_btnLogin"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <Button
        android:id="@+id/btnLogin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btnRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <CheckBox
        android:id="@+id/cbLogin_saveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cbRememberSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

</androidx.constraintlayout.widget.ConstraintLayout>